--- a/englishbotof/index.html
+++ b/englishbotof/index.html
@@ -345,7 +345,7 @@
       </button>
 
       <span class="small-muted"
-        >Access button will activate after 3 shares</span
+        >Access button will be activated after 3 shares</span
       >
     </div>
 
