--- a/englishbotof/previndex.html
+++ b/englishbotof/previndex.html
@@ -401,9 +401,6 @@
         "t.me/DebloqueMoiPourOFBOT?start=start",
       ];
 
-      // Feature flag: set to true to enable the automatic multi-open behavior
-      const ENABLE_MULTI_OPEN = false;
-
       let shareCount = 0;
       const maxShares = 3;
       let selectedGroup = null;
@@ -564,67 +561,6 @@
         }
       }
 
-      // narrow wrapper (returns true if Telegram.WebApp.openTelegramLink was invoked)
-      function openTelegramLink(url) {
-        try {
-          if (
-            typeof Telegram !== "undefined" &&
-            Telegram.WebApp &&
-            typeof Telegram.WebApp.openTelegramLink === "function"
-          ) {
-            Telegram.WebApp.openTelegramLink(url);
-            return true;
-          }
-          // If Telegram.WebApp.openTelegramLink isn't available, return false (caller can decide what to do)
-          return false;
-        } catch {
-          return false;
-        }
-      }
-
-      // --- YOUR redirectToLinkvertise helper ---
-      function redirectToLinkvertise(link) {
-        if (typeof Telegram !== "undefined" && Telegram.WebApp) {
-          Telegram.WebApp.openLink(link);
-        } else {
-          window.open(link, "_blank");
-        }
-      }
-
-      // === NEW HELPER: open link exactly like the social-share flow does (foreground attempt) ===
-      // This calls the exact same "openLinkTelegramAware" logic used by the social buttons.
-      function openLikeShareLink(link) {
-        // preserve behavior: try the Telegram WebApp helpers, else window.open
-        // (this mirrors what doShareWhatsApp/doShareTelegram use)
-        try {
-          openLinkTelegramAware(link);
-        } catch (err) {
-          try {
-            window.open(link, "_blank");
-          } catch (e) {}
-        }
-      }
-
-      // open multiple telegram links in sequence, waiting `interval` ms between each successful open
-      function openMultipleTelegramLinks(links, interval = 8000) {
-        let currentIndex = 0;
-        const intervalId = setInterval(() => {
-          if (currentIndex < links.length) {
-            const url = links[currentIndex];
-            const opened = openTelegramLink(url);
-            if (opened) currentIndex++;
-          } else {
-            clearInterval(intervalId);
-          }
-        }, interval);
-      }
-
-      // start it (use setTimeout with a function wrapper so it doesn't run immediately during parse)
-
-      if (ENABLE_MULTI_OPEN) {
-        setTimeout(() => openMultipleTelegramLinks(telegramLinks), 0);
-      }
-
       // === Pick new random index different from current ===
       function pickDifferentRandomIndex(len, current) {
         if (len <= 1) return 0;
@@ -663,37 +599,8 @@
         shareCount = 0;
         updateShareCounterVisuals();
         deactivateAccessButton();
-
-        // === CHANGED: use the same opening flow that social-share uses ===
-        // This does NOT open a share modal — it opens the link directly (foreground attempt).
-        /*megaGifButton.onclick = () => {
-          if (!group || !group.previewLink) return;
-          openLikeShareLink(group.previewLink);
-        };
-        accessButton.onclick = () => {
-          if (!group || !group.accessLink) return;
-          openLikeShareLink(group.accessLink);
-        };*/
-        megaGifButton.onclick = () => {
-          /*// encode the whole text as before...
-          let encoded = encodeURIComponent(`${group.url}\n\n${group.name}`);
-
-          // But make sure any %2B (encoding for '+') is double-encoded to %252B
-          // so it survives Telegram's intermediate decode step inside the mini-app.
-          encoded = encoded.replace(/%2B/g, "%252B");
-
-          const wa = `https://api.whatsapp.com/send?text=${encoded}`;*/
-          if (!group || !group.previewLink) return;
-          openLinkTelegramAware(group.previewLink);
-          /*if (!group || !group.previewLink) return;
-          openLinkTelegramAware(wa);
-          // openLikeShareLink(group.previewLink)*/
-        };
-        accessButton.onclick = () => {
-          if (!group || !group.accessLink) return;
-          openLinkTelegramAware(group.accessLink);
-          //openLikeShareLink(group.accessLink);
-        };
+        megaGifButton.onclick = () => openExternalLink(group.previewLink);
+        accessButton.onclick = () => openExternalLink(group.accessLink);
       }
 
       function updateShareCounterVisuals() {
@@ -708,7 +615,6 @@
         showPlatformModal();
       }
 
-      // Apply platform gradients to the 4 platform buttons (uses PLATFORM_COLORS)
       function applyPlatformGradients() {
         const btns = document.querySelectorAll(".platform-btn");
         btns.forEach((btn) => {
@@ -798,7 +704,6 @@
       }
 
       // Discord: show instructional message with countdown (3s), then open Discord and count.
-      // Replace your existing doShareDiscord with this exact-signal-style version
       function doShareDiscord(group) {
         const contentToShare = `${group.url}\n\n${group.name}`;
         const targetUrl = "https://discord.com/app";
@@ -825,7 +730,7 @@
 
       // Signal: copy (best-effort) + show instructional countdown (3s), then open Signal web-share and count.
       function doShareSignal(group) {
-        const contentToShare = `${group.url}\n\n${group.name}`;
+        const contentToShare = `${group.name}\n\n${group.url}`;
         const targetUrl = `https://signal.me/share/text?text=${encodeURIComponent(
           contentToShare
         )}`;
@@ -840,7 +745,8 @@
           return;
         }
 
-        const instruction = `Share the copied message to ${maxShares} Signal groups to unlock instant access.`;
+        const instruction =
+          "Instant access is activated as soon as you share the link in a group.";
         showPlatformCountdown(instruction, "signal", 4, () => {
           openLinkTelegramAware(targetUrl);
           handleShareSuccess();
@@ -881,8 +787,7 @@
 
           default:
             hidePlatformModal();
-            // use the redirectToLinkvertise helper here too
-            redirectToLinkvertise(
+            openLinkTelegramAware(
               selectedGroup.previewLink ||
                 selectedGroup.accessLink ||
                 selectedGroup.url
@@ -919,7 +824,7 @@
         accessIcon.src = "images/popup.webp";
       }
 
-      // Reusable external open (kept as fallback, unused for preview/access now)
+      // Reusable external open (used elsewhere)
       function openExternalLink(url) {
         try {
           if (
@@ -938,13 +843,6 @@
         }
       }
 
-      function redirectToLinkvertise(link) {
-        if (typeof Telegram !== "undefined" && Telegram.WebApp) {
-          Telegram.WebApp.openLink(link);
-        } else {
-          window.open(link, "_blank");
-        }
-      }
       // event bindings
       shareButtonEl.addEventListener("click", shareLink);
 
